@@ -1,15 +1,14 @@
 package top.fifthlight.fabazel.remapper;
 
-import net.fabricmc.accesswidener.AccessWidenerReader;
-import net.fabricmc.accesswidener.AccessWidenerWriter;
+import net.fabricmc.classtweaker.api.ClassTweaker;
+import net.fabricmc.classtweaker.api.ClassTweakerReader;
+import net.fabricmc.classtweaker.api.ClassTweakerWriter;
+import net.fabricmc.classtweaker.visitors.ClassTweakerRemapperVisitor;
 import net.fabricmc.tinyremapper.OutputConsumerPath;
 import net.fabricmc.tinyremapper.TinyRemapper;
 import org.objectweb.asm.commons.Remapper;
 
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -27,25 +26,29 @@ public class AccessWidenerRemapper implements OutputConsumerPath.ResourceRemappe
 
     @Override
     public boolean canTransform(TinyRemapper remapper, Path path) {
-        return path.getFileName().toString().toLowerCase().endsWith(".accesswidener");
+        var fileName = path.getFileName().toString().toLowerCase();
+        return fileName.endsWith(".accesswidener") || fileName.endsWith(".classtweaker");
     }
 
     @Override
-    public void transform(Path destinationDirectory, Path relativePath, InputStream input, TinyRemapper tinyRemapper) {
+    public void transform(Path destinationDirectory, Path relativePath, InputStream input, TinyRemapper tinyRemapper) throws IOException {
         var outputFile = destinationDirectory.resolve(relativePath.toString());
 
-        var writer = new AccessWidenerWriter();
-        var accessWidenerRemapper = new net.fabricmc.accesswidener.AccessWidenerRemapper(
+        var content = input.readAllBytes();
+
+        var version = ClassTweakerReader.readVersion(new BufferedReader(new InputStreamReader(new ByteArrayInputStream(content))));
+        var writer = ClassTweakerWriter.create(version);
+        var accessWidenerRemapper = new ClassTweakerRemapperVisitor(
                 writer,
                 this.remapper,
                 fromNamespace,
                 toNamespace
         );
 
-        var reader = new AccessWidenerReader(accessWidenerRemapper);
+        var reader = ClassTweakerReader.create(accessWidenerRemapper);
         try {
-            reader.read(new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8)));
-            Files.writeString(outputFile, writer.writeString());
+            reader.read(new BufferedReader(new InputStreamReader(new ByteArrayInputStream(content))), null);
+            Files.write(outputFile, writer.getOutput());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
